--- a/projects/web-wallet/wallet-connect/0003-caip-10.md
+++ b/projects/web-wallet/wallet-connect/0003-caip-10.md
@@ -11,7 +11,7 @@ requires: ["CAIP-2", "CAIP-10"]
 
 # CAIP-10
 
-*For context, see the [CAIP-10][] specification.*
+*For context, see the [CAIP-10](https://github.com/ChainAgnostic/CAIPs/blob/master/CAIPs/caip-10.md) specification.*
 
 ## Abstract
 
