fix: changed author username

--- a/projects/web-wallet/wallet-connect/0002-caip-2.md
+++ b/projects/web-wallet/wallet-connect/0002-caip-2.md
@@ -1,7 +1,7 @@
 ---
 namespace-identifier: hathor
 title: Hathor Network Namespace
-author: André Abadesso(@levantropov)
+author: André Abadesso (@andreabadesso)
 discussions-to:
 status: Draft
 type: Standard
