docs(references): update references to Hathor docs website - amend broken links

--- a/projects/web-wallet/wallet-connect/0002-caip-2.md
+++ b/projects/web-wallet/wallet-connect/0002-caip-2.md
@@ -75,7 +75,7 @@ hathor:privatenet
 ## References
 * [Hathor Network](https://hathor.network/) - Hathor Website
 * [Hathor Resources](https://hathor.network/resources/) - Various useful resources for working with Hathor Network
-* [Hathor GitBook](https://hathor.gitbook.io/) - Documentation of multiple APIs that are part of the Hathor ecosystem
+* [Hathor docs](https://docs.hathor.network) - Official technical documentation of Hathor.
 
 ## Copyright
 
