--- a/projects/web-wallet/wallet-connect/0003-caip-10.md
+++ b/projects/web-wallet/wallet-connect/0003-caip-10.md
@@ -51,7 +51,7 @@ hathor:testnet:WQDn4KwWrP3dacWbn35iUgea4GPFzV4s35
 ## References
 
 - [Hathor Network](https://hathor.network/)
-- [Hathor Addresses](https://hathor.gitbook.io/hathor/fundamentals/key-concepts/addresses)
+- [Hathor Addresses](https://docs.hathor.network/explanations/blockchain-foundations/addresses)
 - [CAIP-2](https://github.com/ChainAgnostic/CAIPs/blob/master/CAIPs/caip-2.md)
 - [CAIP-10](https://github.com/ChainAgnostic/CAIPs/blob/master/CAIPs/caip-10.md)
 
